# bstvis

./: .gitignore  CMakeLists.txt  README.md  TODO.md
CMake/: x86_64-w64-mingw.cmake
include/: bstvis.h
include/bstvis/: structs.h  testfn.h  tree.h  type.h
lib/: CMakeLists.txt  testfn.c  tree.c
visualiser/: CMakeLists.txt  main.c
visualiser/control/: control.c  control.h
visualiser/io/: mode.c  mode.h  user_query.c  user_query.h
visualiser/tree/: ascii.c  ascii.h  tree.c  tree.h
